fix style z-index...

--- a/themes/apollo/source/scss/_partial/mq.scss
+++ b/themes/apollo/source/scss/_partial/mq.scss
@@ -32,6 +32,7 @@ main.container {
           position: fixed;
           width: 100%;
           top: 0;
+          z-index: 10;
         }
         // toggle button
         button.ltmenu {
